C2LC-289: Fixed play and share background issues on smaller screen widths.

--- a/src/App.scss
+++ b/src/App.scss
@@ -189,7 +189,7 @@ body {
 
 @media only screen and (max-width: 768px) {
     .App__container {
-        grid-template-rows: auto auto 1fr min-content;
+        grid-template-rows: auto auto 1fr auto 7rem;
     }
 
     .App__command-palette-commands {
